--- a/PortfolioV4/Views/Account/Login.cshtml
+++ b/PortfolioV4/Views/Account/Login.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="jumbotron loginComputer">
+    <h1 class="jumboText">@ViewBag.Title.</h1>
+</div>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
