--- a/PortfolioV4/Views/Account/ResetPassword.cshtml
+++ b/PortfolioV4/Views/Account/ResetPassword.cshtml
@@ -1,9 +1,11 @@
 ﻿@model PortfolioV4.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Reset Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="jumbotron loginComputer">
+    <h1 class="jumboText">@ViewBag.Title.</h1>
+</div>
 
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
