--- a/PortfolioV4/Views/BlogPosts/Create.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Create.cshtml
@@ -1,11 +1,13 @@
 ﻿@model PortfolioV4.Models.codeFirst.BlogPost
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Post";
     
 }
 
-<h2>Create</h2>
+<div class="jumbotron loginJournal">
+    <h1 class="jumboText">Scribe The Latest Millimoment </h1>
+</div>
 
 
 @using (Html.BeginForm()) 
