--- a/PortfolioV4/Views/BlogPosts/Edit.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Edit.cshtml
@@ -1,11 +1,13 @@
 ﻿@model PortfolioV4.Models.codeFirst.BlogPost
 
 @{
-    ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Edit Post";
+    
 }
 
-<h2>Edit</h2>
+<div class="jumbotron loginJournal" >
+    <h1 class="jumboText">Edit: Perfection++ </h1>
+</div>
 
 
 @using (Html.BeginForm())
