--- a/PortfolioV4/Views/Home/Index.cshtml
+++ b/PortfolioV4/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home";
-   
+}
 
 <section id="home">
     <div class="home-pattern"></div>
@@ -15,7 +15,7 @@
                 <div class="carousel-caption">
                     <div>
                         <h2 class="heading animated bounceInDown">Aaron Rowan</h2>
-                        <p class="animated bounceInUp">Full Stack Web Developer</p>
+                        <p class="animated bounceInUp">C# ASP.NET Full Stack Web Developer</p>
                         
                     </div>
                 </div>
