--- a/PortfolioV4/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/PortfolioV4/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,8 +1,12 @@
 ﻿@model PortfolioV4.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registered";
 }
-<h2>@ViewBag.Title.</h2>
+
+<div class="jumbotron loginComputer">
+    <h1 class="jumboText">@ViewBag.Title.</h1>
+</div>
+
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
