--- a/PortfolioV4/Views/Account/Register.cshtml
+++ b/PortfolioV4/Views/Account/Register.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Register";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="jumbotron loginComputer">
+    <h1 class="jumboText">@ViewBag.Title.</h1>
+</div>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
