--- a/PortfolioV4/Views/BlogPosts/Delete.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Delete.cshtml
@@ -2,10 +2,12 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
 
-<h2>Delete</h2>
+<div class="jumbotron loginSnail">
+    <h1 class="jumboText">Delete: Alter History </h1>
+</div>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
