--- a/PortfolioV4/Views/BlogPosts/Details.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Details.cshtml
@@ -1,17 +1,19 @@
 ﻿@model PortfolioV4.Models.codeFirst.BlogPost
 
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "View Post";
+    
 }
 
-<h2>Details</h2>
+<div class="jumbotron loginSnail">
+    <h1 class="jumboText">View and Comment as Fate Requires</h1>
+</div>
 
 <div>
     <h4>BlogPost</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Created)
         </dt>
 
@@ -25,7 +27,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Updated)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -35,13 +37,13 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.Slug)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Slug)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Body)
@@ -51,13 +53,13 @@
             @Html.DisplayFor(model => model.Body)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.MediaURL)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.MediaURL)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Published)
