--- a/PortfolioV4/Views/BlogPosts/Index.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Index.cshtml
@@ -2,34 +2,30 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+   
 }
 
-<h2>Index</h2>
+
+<div class="jumbotron loginSnail">
+    <h1 class="jumboText" >Blogs Of History</h1>
+</div>
+
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button type="button" class="btn btn-warning buttonColor">@Html.ActionLink("Create New", "Create",null,new {@style="color: white"})</button>
+    
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Updated)
-        </th>
+            Last Edit
+        </th>       
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Slug)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Body)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MediaURL)
-        </th>
+        </th>        
         <th>
             @Html.DisplayNameFor(model => model.Published)
         </th>
@@ -40,28 +36,24 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Created)
+            
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Updated)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Slug)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Body)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MediaURL)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.Published)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("View", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
