--- a/PortfolioV4/Views/Shared/_Layout.cshtml
+++ b/PortfolioV4/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" />
     <meta name="author" content="">
     <title>Web Developer - Aaron Rowan</title>
+
     
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/css/prettyPhoto.css" rel="stylesheet">
@@ -14,6 +15,7 @@
     <link href="~/css/animate.css" rel="stylesheet">
     <link href="~/css/main.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
+    <link href="~/css/blog.css" rel="stylesheet" />
     <!--[if lt IE 9]> <script src="~/js/html5shiv.js"></script>
     <script src="~/js/respond.min.js"></script> <![endif]-->
     <link rel="shortcut icon" href="~/images/ico/favicon.png">
@@ -21,6 +23,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="~/images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="~/images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="~/images/ico/apple-touch-icon-57-precomposed.png">
+    
 </head><!--/head-->
 <body>
     <div class="preloader">
@@ -51,8 +54,30 @@
                         <li class="scroll"><a href="@Url.Action("About","home")">About Me</a></li>
                         <li class="scroll"><a href="@Url.Action("Skills","home")">Skills</a></li>
                         <li class="scroll"><a href="@Url.Action("Portfolio","home")">Portfolio</a></li>
-                        <li class="scroll"><a href="@Url.Action("create","BlogPosts")">Blog</a></li>
+                        <li class="scroll"><a href="@Url.Action("index","BlogPosts")">Blog</a></li>
                         <li class="scroll"><a href="@Url.Action("Contact","home")">Contact</a></li>
+                        @using Microsoft.AspNet.Identity
+                        @if (Request.IsAuthenticated)
+                        {
+                            using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+                            {
+                                @Html.AntiForgeryToken()
+
+
+                                <li>
+                                    @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                                </li>
+                                <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+
+                            }
+                        }
+                        else
+                        {
+
+                            <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+                            <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+
+                        }
                     </ul>
                 </div>
             </div>
