--- a/PortfolioV4/Views/BlogPosts/Delete.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Delete.cshtml
@@ -9,9 +9,9 @@
     <h1 class="jumboText">Delete: Alter History </h1>
 </div>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="buttonColor">Are you sure you want to delete this?</h3>
 <div>
-    <h4>BlogPost</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -51,7 +51,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Body)
+            @Html.Raw(Model.Body)
         </dd>
 
         <dt>
@@ -76,7 +76,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default buttonColor" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
