--- a/PortfolioV4/Views/BlogPosts/Details.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Details.cshtml
@@ -6,14 +6,14 @@
 }
 
 <div class="jumbotron loginSnail">
-    <h1 class="jumboText">View and Comment as Fate Requires</h1>
+    <h1 class="jumboText">View and Comment</h1>
 </div>
 
 <div>
     <h4>BlogPost</h4>
     <hr />
     <dl class="dl-horizontal">
-        @*<dt>
+        <dt>
             @Html.DisplayNameFor(model => model.Created)
         </dt>
 
@@ -27,7 +27,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Updated)
-        </dd>*@
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -50,7 +50,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Body)
+            @Html.Raw(Model.Body)
         </dd>
 
         @*<dt>
