--- a/PortfolioV4/Views/Shared/_Layout.cshtml
+++ b/PortfolioV4/Views/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
+
                         <li class="scroll active"><a href="@Url.Action("index","home")">Home</a></li>
                         <li class="scroll"><a href="@Url.Action("About","home")">About Me</a></li>
                         <li class="scroll"><a href="@Url.Action("Skills","home")">Skills</a></li>
@@ -114,5 +115,6 @@
     <script type="text/javascript" src="~/js/main.js"></script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
     <script>tinymce.init({ selector:'.textarea' });</script>
+    <script type="text/javascript" src="~/js/navBar.js"></script>
 </body>
 </html>
