Fixed Navbar with HtmlHelper Class

--- a/PortfolioV4/Views/Home/About.cshtml
+++ b/PortfolioV4/Views/Home/About.cshtml
@@ -82,7 +82,7 @@
                                 <div class="media-body">
                                     <h4 style="margin-bottom: 10px; margin-top: 5px;">Leaving a Legacy</h4><p><b>Improving the environmental footprint of an entire industry.</b></p>
                                     <p>Collaborating with all parts of our organiztion, I identfied a key change to our products that would enable us to use significantly more recycled material.</p>
-                                    <p<b>Net Effects: </b></p>
+                                    <p><b>Net Effects: </b></p>
                                     <ul>
                                         <li>Reduced our company's Carbon Footprint by an Amount Equivalent to 200,000 Cars per Year.</li>
                                         <li>New Process Saves $8 Million per Year</li>
@@ -133,9 +133,9 @@
                             <div class="skillbar-title"><span>Wordpress</span></div>
                             <div class="skillbar-bar"></div>
                             
-                        </div> <!-- End Skill Bar -->
+                        </div> 
                     </div>
-                </div>
+                </div><!-- End Skill Bar -->
             </div>
         </div>
     </div>
