Initial Create of Image Upload and Slug Functionality.  Neither fully Incorporated.

--- a/PortfolioV4/Views/BlogPosts/Edit.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Edit.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "BlogPosts", FormMethod.Post, new { enctype = "Multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -64,8 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MediaURL, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MediaURL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MediaURL, "", new { @class = "text-danger" })
+                <input name="image" type="file" class="form-control" id="fileUpload" />
             </div>
         </div>
 
@@ -78,7 +77,7 @@
                 </div>
             </div>
         </div>
-
+        @*<input name="image"type="file" class="form-control" id="fileUpload" />*@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default buttonColor" />
