--- a/PortfolioV4/Views/BlogPosts/Index.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<PortfolioV4.Models.codeFirst.BlogPost>
+﻿@model IPagedList<PortfolioV4.Models.codeFirst.BlogPost>
+@using PagedList
+@using PagedList.Mvc
 
 @{
     ViewBag.Title = "Index";
@@ -21,34 +23,31 @@
 </p>
 <table class="table" style="text-align: center;">
     <tr style="text-align: center;">
+        <th></th>
         <th style="text-align: center;">
             Latest Edit
         </th>       
         <th style="text-align: center;">
-            @Html.DisplayNameFor(model => model.Title)
+           Post Title
         </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.Slug)
-        </th>*@        
+             
         <th style="text-align: center;">
-            @Html.DisplayNameFor(model => model.Published)
+            Published?
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
-
          @*Create Gravatar
             <img class="entry-avatar" height ="52" width = "52" src="http://www.gravatar.com/avatar/[biglongstring]" >  *@
         <td>
-            @if (item.Updated == null)
-            {
-                item.Updated = item.Created;
-            }
-                       
+            <img class="img-responsive" src="@item.MediaURL" alt="" height="52" width="52" />
+        </td>
+        
+        <td>                                 
             @Html.Label(@item.Updated.Value.ToString("M - dd - yy"))
-
         </td>
         @*<td>
             @Html.DisplayFor(modelItem => item.Updated)
@@ -64,11 +63,15 @@
             @Html.DisplayFor(modelItem => item.Published)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("View", "Details", new { id=item.Id }) |
+            
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            <a href="@Url.Action("Details", new { slug = item.Slug })">View</a> |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
 
 </table>
+
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) 
+    of @Model.PageCount @Html.PagedListPager(Model, page => Url.Action("Index",new { page }))
