--- a/PortfolioV4/Views/Comments/Delete.cshtml
+++ b/PortfolioV4/Views/Comments/Delete.cshtml
@@ -1,8 +1,5 @@
 ﻿@model PortfolioV4.Models.codeFirst.Comment
 
-@{
-    Layout = null;
-}
 
 <!DOCTYPE html>
 
@@ -12,6 +9,11 @@
     <title>Delete</title>
 </head>
 <body>
+
+    <div class="jumbotron loginComment">
+        <h1 class="commentText">Share the Love</h1>
+    </div>
+
     <h3>Are you sure you want to delete this?</h3>
     <div>
         <h4>Comment</h4>
