--- a/PortfolioV4/Views/Comments/Create.cshtml
+++ b/PortfolioV4/Views/Comments/Create.cshtml
@@ -1,8 +1,6 @@
 ﻿@model PortfolioV4.Models.codeFirst.Comment
 
-@{
-    Layout = null;
-}
+
 
 <!DOCTYPE html>
 
@@ -12,34 +10,22 @@
     <title>Create</title>
 </head>
 <body>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     
-    
+    <div class="jumbotron loginComment">
+        <h1 class="commentText">Share the Love</h1>
+    </div>
     @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
-        
+        <input type="hidden" name="PostId" value="@ViewBag.PostId">
         <div class="form-horizontal">
             <h4>Comment</h4>
             <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.PostId, "PostId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("PostId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PostId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.AuthorId, "AuthorId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("AuthorId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.AuthorId, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-    
+           
+               
             <div class="form-group">
                 @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -50,7 +36,7 @@
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-default buttonColor" />
                 </div>
             </div>
         </div>
