--- a/PortfolioV4/Views/BlogPosts/Index.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Index.cshtml
@@ -18,10 +18,10 @@
 }*@
 @using (Html.BeginForm("Index", "BlogPosts", FormMethod.Get, new { enctype = "Multipart/form-data" }))
 {
-    
+    <button type="submit" class="btn buttonColor" style="color:white">Search</button>
     <input type="text" name="searchStr" class="form-control" />
     @*<button type="submit" class="btn btn-default buttonColor" style = "color: white">@Html.ActionLink("Search", "Index", null, new { @style = "color: white" })</button>*@
-    <button type="submit" class="btn buttonColor" style="color:white">Search</button>
+    
 }
 <p>
     <button type="button" class="btn btn-warning buttonColor">@Html.ActionLink("Create New", "Create",null,new {@style="color: white"})</button>
@@ -53,7 +53,7 @@
         </td>
         
         <td>                                 
-            @Html.Label(@item.Updated.Value.ToString("M - dd - yy"))
+            @Html.Label(@item.Updated.Value.ToString("MMMM, dd yyyy  hh:mm tt"))
         </td>
         @*<td>
             @Html.DisplayFor(modelItem => item.Updated)
