--- a/PortfolioV4/Views/BlogPosts/Index.cshtml
+++ b/PortfolioV4/Views/BlogPosts/Index.cshtml
@@ -16,17 +16,27 @@
 {
     <img class="img-responsive" src="@Model.MediaURL" alt="BlogPost" />
 }*@
-@using (Html.BeginForm("Index", "BlogPosts", FormMethod.Get, new { enctype = "Multipart/form-data" }))
-{
-    <button type="submit" class="btn buttonColor" style="color:white">Search</button>
-    <input type="text" name="searchStr" class="form-control" />
-    @*<button type="submit" class="btn btn-default buttonColor" style = "color: white">@Html.ActionLink("Search", "Index", null, new { @style = "color: white" })</button>*@
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            <button type="button" class="btn btn-warning buttonColor">@Html.ActionLink("Create New", "Create", null, new { @style = "color: white" })</button>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            @using (Html.BeginForm("Index", "BlogPosts", FormMethod.Get, new { enctype = "Multipart/form-data" }))
+            {
+                <div class="row">
+                    <div class="col-md-3" style="text-align:right;"><button type="submit" class="btn buttonColor" style="color:white; margin-bottom: 25px;">Search</button></div>
+                    <div class="col-md-9"><input type="text" name="searchStr" class="form-control" /></div>
+                </div> 
+            }
+        </div>
+    </div>   
+</div>
+   
     
-}
-<p>
-    <button type="button" class="btn btn-warning buttonColor">@Html.ActionLink("Create New", "Create",null,new {@style="color: white"})</button>
-    
-</p>
+
 <table class="table" style="text-align: center;">
     <tr style="text-align: center;">
         <th></th>
