Formatting.  Added Link to Bug Tracker.

--- a/PortfolioV4/Views/Home/Contact.cshtml
+++ b/PortfolioV4/Views/Home/Contact.cshtml
@@ -15,7 +15,7 @@
         <div class="row text-center clearfix">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="contact-heading">
-                    <h2 class="title-one">Contact With Us</h2>
+                    <h2 class="title-one">Connection Info</h2>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/Novelis-Cans-for-the-Community-158963970794045/"><i class="fa fa-facebook"></i></a>
                         @*<a href="#"><i class="fa fa-twitter"></i></a>*@
