Added link to external MicrodataGenerator

--- a/PortfolioV4/Views/Home/Portfolio.cshtml
+++ b/PortfolioV4/Views/Home/Portfolio.cshtml
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-sm-4 myImages" >
-            <a href="https://rowana16.github.io/MicrodataGenerator/index.html"><img src="~/images/portfolio/MicrodataScreenShot.jpg" class="myImages" /></a>
+            <a href="http://MicrodataGenerator.com"><img src="~/images/portfolio/MicrodataScreenShot.jpg" class="myImages" /></a>
         </div>
         <div class="col-sm-8">
            <h2>MicrodataGenerator.com</h2>  <p>SEO is something that should be designed-in not added after.  I've developed a tool to create the JSON-LD that allow Google and other search engines to parse and develop a richer browsing experience for users. Particularly good at focusing on small businesses and individuals without a SEO budget, the site already had some pretty good traffic.</p>
